--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Especialista em doces finos para casamento, aniversário e eventos em geral"
     />
-    <link rel="apple-touch-icon" href="bombom.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/bombom.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <!-- Bootstrap -->
